Layout break and some bug fix

--- a/src/css/AlertModal.css
+++ b/src/css/AlertModal.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(0 , 0 , 0 , 0.7);
+    z-index: 10;
 }
 
 .alertModal{
