--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(0 , 0 , 0 , 0.7);
-    z-index: 3;
+    z-index: 10;
   }
 
   .modal-content{
