--- a/src/css/NoteBox.css
+++ b/src/css/NoteBox.css
@@ -75,7 +75,7 @@
     transform: translate(-50%,-50%);
     width: 70%;
     height: 85%;
-    z-index: 9999; /* make sure it's on top of other elements */
+    z-index: 8;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow-y: auto;
     transition: width 0.5s ease-in-out;
